--- a/PYTHON-FRONT/index.html
+++ b/PYTHON-FRONT/index.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rocco Couture</title>
-    <link rel="stylesheet" href="./static/css/styles.css">
-    <link rel="shortcut icon" href="./static/img/LogoRC.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="shortcut icon" href="./img/LogoRC.ico" type="image/x-icon">
 </head>
 
 <body>
     <header>
-        <img src="./static/img/logoRC.png" alt="Logo" id="logo">
+        <img src="./img/logoRC.png" alt="Logo" id="logo">
         <h1>Rocco Couture</h1>
         <nav>
             <ul>
                 <li><a href="index.html" class="selected">Inicio</a></li>
-                <li><a href="catalogo.html">Catálogo</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-                <li><a href="administrar_productos.html" class="boton">Administrar Productos</a></li>
+                <li><a href="./templates/catalogo.html">Catálogo</a></li>
+                <li><a href="./templates/nosotros.html">Nosotros</a></li>
+                <li><a href="./templates/contacto.html">Contacto</a></li>
+                <li><a href="./templates/administrar_productos.html" class="boton">Administrar Productos</a></li>
             </ul>
         </nav>
     </header>
@@ -29,16 +29,16 @@
      <div class="carousel">
         <div class="carousel-inner">
             <div class="carousel-item">
-                <img src="./static/img/banner01.png" alt="Imagen 1">
+                <img src="./img/banner01.png" alt="Imagen 1">
             </div>
             <div class="carousel-item">
-                <img src="./static/img/banner02.png" alt="Imagen 2">
+                <img src="./img/banner02.png" alt="Imagen 2">
             </div>
             <div class="carousel-item">
-                <img src="./static/img/banner03.png" alt="Imagen 3">
+                <img src="./img/banner03.png" alt="Imagen 3">
             </div>
              <div class="administrar-productos">
-                <a href="administrar_productos.html" class="boton">Administrar Productos</a>
+                <a href="./templates/administrar_productos.html" class="boton">Administrar Productos</a>
              </div>
         </div>
         <a class="carousel-control-prev" href="#inicio" role="button" data-slide="prev">&lsaquo;</a>
@@ -51,7 +51,7 @@
         <p>&copy; 2024 Tienda de Ropa. Todos los derechos reservados.</p>
     </footer>
    
-    <script src="/static/js/scripts.js"></script>
+    <script src="./js/scripts.js"></script>
 </body>
 
 </html>
