--- a/PYTHON-FRONT/index.html
+++ b/PYTHON-FRONT/index.html
@@ -16,10 +16,10 @@
         <nav>
             <ul>
                 <li><a href="index.html" class="selected">Inicio</a></li>
-                <li><a href="./templates/catalogo.html">Catálogo</a></li>
+                <li><a href="./templates/catalogodyn.html">Catálogo</a></li>
                 <li><a href="./templates/nosotros.html">Nosotros</a></li>
                 <li><a href="./templates/contacto.html">Contacto</a></li>
-                <li><a href="./templates/administrar_productos.html" class="boton">Administrar Productos</a></li>
+                <!-- <li><a href="./templates/administrar_productos.html" class="boton">Administrar Productos</a></li> -->
             </ul>
         </nav>
     </header>
@@ -37,9 +37,7 @@
             <div class="carousel-item">
                 <img src="./img/banner03.png" alt="Imagen 3">
             </div>
-             <div class="administrar-productos">
-                <a href="./templates/administrar_productos.html" class="boton">Administrar Productos</a>
-             </div>
+             
         </div>
         <a class="carousel-control-prev" href="#inicio" role="button" data-slide="prev">&lsaquo;</a>
         <a class="carousel-control-next" href="#inicio" role="button" data-slide="next">&rsaquo;</a>
